# jobs-scraper

./: .gitignore  .nojekyll  LICENSE  README.md  definitions.sql  index.html  jobs.db  pyproject.toml  requirements.txt  scraper_example.py  usage.html  usage.ipynb  usage.qmd  utils.py
.github/workflows/: main.yml  publish.yml
src/: indeed_scraper.py  utils.py
usage_files/libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
