[tool.poetry]
name = "jobs-scraper"
version = "0.1.0"
description = "A selenium-based job scraper in Python"
authors = ["hh-13 <hh-13>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
markdownify = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
