[tool.poetry]
name = "jobs-scraper"
version = "0.1.0"
description = "A selenium-based job scraper in Python"
authors = ["hh-13 <hh-13>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
markdownify = "^0.12.1"
polars = "^0.20"
pyarrow = "^16.1.0"
duckdb = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
